# cpp-dev-sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  foo.cxx  main.cxx  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-docker-image.yml
